--- a/public/views/login.html
+++ b/public/views/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Account</title>
+    <title>Login</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="public/css/style.css">
-    <link rel="stylesheet" href="public/css/forms/forms.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/forms/forms.css">
 
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/a39639353a.js" crossorigin="anonymous"></script>
@@ -20,19 +20,9 @@
     </div>
 
     <div class="container">
-        <div class="left">
+        <div class="right" style="width: 100%;">
             <div class="top">
-                <h1 class="logo">Hakkie</h1>
-            </div>
-
-            <div class="content">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod placeat nam nobis dolorum hic neque qui, esse ratione obcaecati quos quis voluptatem sapiente, quo maiores? Voluptate perspiciatis atque hic ratione?
-            </div>
-        </div>
-
-        <div class="right">
-            <div class="top">
-                Create Account
+                Log into your account
             </div>
 
             <div class="social-media">
@@ -44,9 +34,6 @@
             <div class="or">OR</div>
 
             <form action="" method="POST">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name">
-
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
 
@@ -60,14 +47,14 @@
             </form>
         </div>
     </div>
-
-    <a href="public/views/login.html">
+    
+    <a href="../../index.html">
         <div id="switch-form-btn">
-            I already have an account!
+            I still don't have an account
         </div>
     </a>
-    
-    <script src="public/js/switchTheme.js"></script>
-    <script src="public/js/showPssword.js"></script>
+
+    <script src="../js/switchTheme.js"></script>
+    <script src="../js/showPssword.js"></script>
 </body>
 </html>
