--- a/public/css/forms/forms.css
+++ b/public/css/forms/forms.css
@@ -51,6 +51,18 @@ body .container .left .top .logo {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-family: 'Comfortaa', cursive;
+  position: relative;
+}
+
+body .container .left .top .logo::after {
+  content: '';
+  width: 8%;
+  height: 8px;
+  border-radius: 1em;
+  background: linear-gradient(45deg, #7700ff, #ff4800);
+  position: absolute;
+  bottom: -3px;
+  left: 0;
 }
 
 body .container .left .content {
@@ -112,6 +124,7 @@ body .container .right .or {
   position: relative;
   text-align: center;
   margin: 1em 0 2em 0;
+  letter-spacing: 2px;
 }
 
 body .container .right .or::after {
@@ -177,6 +190,18 @@ body #switch-theme-btn {
   cursor: pointer;
 }
 
+body #switch-form-btn {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(35deg, #7700ff 40%, #0059ff);
+  border-radius: 0 2em 0 0;
+  padding: 25px 30px 10px 15px;
+  font-size: 1.2em;
+  color: #FFF;
+  text-decoration: none;
+}
+
 body.light input {
   -webkit-box-shadow: 0px 0px 10px #d8d8d8;
           box-shadow: 0px 0px 10px #d8d8d8;
@@ -234,5 +259,15 @@ body.dark .show-password {
   body .container .right .or {
     width: 100%;
   }
+  body #switch-form-btn {
+    position: absolute;
+    text-align: center;
+    border-radius: 0;
+    padding: 10px;
+    width: 100%;
+    font-size: .9em;
+    color: #FFF;
+    text-decoration: none;
+  }
 }
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=forms.css.map */
