--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,10 +5,13 @@
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
+  -webkit-transition: 100ms;
+  transition: 100ms;
 }
 
 html {
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
