--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -5,10 +5,13 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+
+    transition: 100ms;
 }
 
 html {
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 body {
