--- a/public/views/login.html
+++ b/public/views/login.html
@@ -25,14 +25,6 @@
                 Log into your account
             </div>
 
-            <div class="social-media">
-                <i class="fab fa-google-plus-square"></i>
-                <i class="fab fa-facebook-square"></i>
-                <i class="fab fa-linkedin"></i>
-            </div>
-
-            <div class="or">OR</div>
-
             <form action="" method="POST">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email">
@@ -45,6 +37,15 @@
 
                 <input type="submit" value="Submit">
             </form>
+
+            <div class="or">
+                OR
+            </div>
+
+            <div class="google-login">
+                <img src="../images/g-logo.png" alt="Google">
+                Login with Google
+            </div>
         </div>
     </div>
     
