--- a/public/css/forms/forms.scss
+++ b/public/css/forms/forms.scss
@@ -17,13 +17,11 @@ body {
             display: flex;
             justify-content: center;
             flex-direction: column;
-            /* Mudar para se adequar a nova logo*/
+            
             .top {
                 margin-bottom: 3em;
                 display: flex;
                     
-
-                /* Logo provisória */
                 .logo {
                     font-size: 4em;
                     background: linear-gradient(45deg, #7700ff,  #eb4808);
@@ -63,8 +61,6 @@ body {
             width: 40%;
 
             .top,
-            .social-media,
-            .or,
             form {
                 max-width: 600px;
             }
@@ -83,36 +79,6 @@ body {
                 font-family: 'Comfortaa', cursive;
 
                 text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.507);
-            }
-
-            .social-media {
-                display: flex;
-                justify-content: space-evenly;
-                margin: 1em 2em;
-
-                i {
-                    cursor: pointer;
-                    font-size: 3em;
-                }
-            }
-
-            .or {
-                color: gray;
-                position: relative;
-                text-align: center;
-                margin: 1em 0 2em 0;
-                letter-spacing: 2px;
-
-                &::after {
-                    content: '';
-                    width: 100%;
-                    height: 3px;
-                    border-radius: 1em;
-                    background: linear-gradient(35deg, #7700ff 40%,  #0059ff);
-                    position: absolute;
-                    bottom: -10px;
-                    left: 0;
-                }
             }
 
             form {
@@ -159,6 +125,55 @@ body {
                     font-weight: 600;
                     font-size: 1.1em;
                     cursor: pointer;
+                }
+            }
+
+            .or {
+                margin: 2em 0;
+                position: relative;
+                text-align: center;
+                font-weight: 500;
+                width: 100%;
+
+                &::before {
+                    left: 0;
+                }
+
+                &::after {
+                    right: 0;
+                }
+                
+                &::before, 
+                &::after {
+                    content: '';
+                    position: absolute;
+                    height: 8px;
+                    width: 40%;
+                    background: rgba(141, 141, 141, 0.411);
+                    bottom: 8px;
+                    border-radius: 1em;
+                }
+            }
+
+            .google-login {
+                width: 80%;
+                margin: 0 auto;
+                margin-top: 1em;
+                border-radius: 3em;
+                font-size: 1em;
+                font-weight: 500;
+                padding: 1em;
+                border: 2px solid #4285F4;
+                background: #FFF;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+                color: rgb(77, 77, 77);
+
+                img {
+                    width: 2em;
+                    margin-right: 1em;
                 }
             }
         }
@@ -256,11 +271,10 @@ body.dark {
                     font-size: 1.5em;
                 }
 
-                .social-media,
-                .or {
+                .google-login {
                     width: 100%;
+                    margin-bottom: 4em;
                 }
-
             }
         }
 
