--- a/public/css/forms/forms.css
+++ b/public/css/forms/forms.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap");
 body {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -9,7 +8,6 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: relative;
 }
 
 body .container {
@@ -42,28 +40,6 @@ body .container .left .top {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-body .container .left .top .logo {
-  font-size: 4em;
-  background: linear-gradient(45deg, #7700ff, #eb4808);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: 'Comfortaa', cursive;
-  position: relative;
-  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.212);
-}
-
-body .container .left .top .logo::after {
-  content: '';
-  width: 70px;
-  height: 8px;
-  border-radius: 1em;
-  background: linear-gradient(45deg, #7700ff, #eb4808);
-  position: absolute;
-  bottom: -3px;
-  left: 0;
 }
 
 body .container .left .content {
@@ -204,11 +180,8 @@ body .container .right .google-login img {
 }
 
 body #switch-theme-btn {
-  position: absolute;
-  font-size: 2em;
   top: 10px;
   left: 10px;
-  cursor: pointer;
 }
 
 body #switch-form-btn {
@@ -220,7 +193,6 @@ body #switch-form-btn {
   padding: 25px 30px 10px 15px;
   font-size: 1.2em;
   color: #FFF;
-  text-decoration: none;
 }
 
 body #switch-form-btn:hover {
@@ -260,11 +232,9 @@ body.dark .show-password {
     margin: 2em 0;
   }
   body .container .left .top .logo {
-    width: 100%;
+    font-size: 3em;
     text-align: center;
-  }
-  body .container .left .top .logo::after {
-    height: 0;
+    margin: 0 auto;
   }
   body .container .left .content {
     max-width: 600px;
@@ -299,7 +269,6 @@ body.dark .show-password {
     width: 100%;
     font-size: .9em;
     color: #FFF;
-    text-decoration: none;
   }
 }
 /*# sourceMappingURL=forms.css.map */
