--- a/public/css/forms/forms.scss
+++ b/public/css/forms/forms.scss
@@ -1,10 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
-
 body { 
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
 
     .container {
         display: flex;
@@ -21,30 +18,6 @@ body {
             .top {
                 margin-bottom: 3em;
                 display: flex;
-                    
-                .logo {
-                    font-size: 4em;
-                    background: linear-gradient(45deg, #7700ff,  #eb4808);
-                    background-clip: text;
-
-                    -webkit-background-clip: text;
-                    -webkit-text-fill-color: transparent;
-                    font-family: 'Comfortaa', cursive;
-
-                    position: relative;
-                    text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.212);
-
-                    &::after {
-                        content: '';
-                        width: 70px;
-                        height: 8px;
-                        border-radius: 1em;
-                        background: linear-gradient(45deg, #7700ff,  #eb4808);
-                        position: absolute;
-                        bottom: -3px;
-                        left: 0;
-                    }
-                }
             }
 
             .content {
@@ -180,11 +153,8 @@ body {
     }
 
     #switch-theme-btn {
-        position: absolute;
-        font-size: 2em;
         top: 10px;
         left: 10px;
-        cursor: pointer;
     }
 
     #switch-form-btn {
@@ -198,7 +168,6 @@ body {
 
         font-size: 1.2em;
         color: #FFF;
-        text-decoration: none;
 
         &:hover {
             padding: 25px 30px 20px 15px;
@@ -244,12 +213,9 @@ body.dark {
 
                 .top {
                     .logo {
-                        width: 100%;
+                        font-size: 3em;   
                         text-align: center;
-
-                        &::after {
-                            height: 0;
-                        }
+                        margin: 0 auto;
                     }
                 }
 
@@ -287,7 +253,6 @@ body.dark {
     
             font-size: .9em;
             color: #FFF;
-            text-decoration: none;
         }
     }
 }
