--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -14,9 +15,34 @@ html {
     scroll-behavior: smooth;
 }
 
+a {
+    text-decoration: none;
+}
+
 body {
     width: 100vw;
     min-height: 100vh;
+    position: relative;
+}
+
+.logo {
+    font-size: 4em;
+    max-width: 280px;
+    background: linear-gradient(45deg, #7700ff,  #eb4808);
+    background-clip: text;
+    font-weight: bold;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-family: 'Comfortaa', cursive;
+    position: relative;
+    text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.212);
+}
+
+#switch-theme-btn {
+    position: absolute;
+    font-size: 2em;
+    cursor: pointer;
+    z-index: 1;
 }
 
 body.light {
