Start of Login System
Barebones of the backend added, with sql table, php pages, register, login and logout now working

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -43,6 +43,10 @@
                 <i class="fas fa-cog"></i>
                 <span>Settings</span>
             </a>
+            <a href="../../app/php/logout.php" class="btn">
+                <i class="fas fa-sign-out-alt"></i>
+                <span>Logout</span>
+            </a>
         </div>  
     </div>
 
@@ -83,7 +87,7 @@
         <i class="fas fa-chevron-up"></i>
     </div>
 
-    <script src="../js/switchTheme.js"></script>
-    <script src="../js/openMessages.js"></script>
+    <script src="../../js/switchTheme.js"></script>
+    <script src="../../js/openMessages.js"></script>
 </body>
 </html>
