--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,17 +7,16 @@
     <title>Home</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="../css/home/home.css">
+    <link rel="stylesheet" href="../css/home/grid/grid.css">
     <link rel="stylesheet" href="../css/style.css">
 
     <!-- Font Awesome-->
     <script src="https://kit.fontawesome.com/a39639353a.js" crossorigin="anonymous"></script>
-</head>
-<body class="light">
-    <div id="switch-theme-btn">
-        <i class="fas fa-adjust"></i>
-    </div>
 
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="../images/favicon.png" type="image/x-icon">
+</head>
+<body class="dark">
     <div id="tool-bar">
         <div class="logo">
             Hakkie
@@ -42,10 +41,6 @@
             <a href="#" class="btn">
                 <i class="fas fa-cog"></i>
                 <span>Settings</span>
-            </a>
-            <a href="../../app/php/logout.php" class="btn">
-                <i class="fas fa-sign-out-alt"></i>
-                <span>Logout</span>
             </a>
         </div>  
     </div>
