Password Recovery System working and change to tables
Fixed the authy of the PRS not working
+ testing with PgAdmin4 strange EDR diagram of tables with the format .PDGERD

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -38,7 +38,7 @@
                 <span>Profile</span>
             </a>
 
-            <a href="#" class="btn">
+            <a href="settings.html" class="btn">
                 <i class="fas fa-cog"></i>
                 <span>Settings</span>
             </a>
