--- a/public/views/settings.html
+++ b/public/views/settings.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="buttons">
-            <a href="#" class="btn">
+            <a href="home.html" class="btn">
                 <i class="fas fa-home"></i>
                 <span>Home</span>
             </a>
@@ -42,6 +42,10 @@
             <a href="#" class="btn">
                 <i class="fas fa-cog"></i>
                 <span>Settings</span>
+            </a>
+            <a href="../../app/php/logout.php" class="btn">
+                <i class="fas fa-cog"></i>
+                <span>Logout</span>
             </a>
         </div>  
     </div>
