--- a/public/css/home/settings/settings.css
+++ b/public/css/home/settings/settings.css
@@ -115,15 +115,90 @@
   width: 100%;
 }
 
+#container .settings #block-manage.open .block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 10px;
+  border-radius: 1em;
+  font-weight: 500;
+  position: relative;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-top: 10px;
+}
+
+#container .settings #block-manage.open .block .left {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 90%;
+  word-break: break-all;
+  padding-left: 1em;
+}
+
+#container .settings #block-manage.open .block .left img {
+  margin-right: 10px;
+}
+
+#container .settings #block-manage.open .block .right {
+  cursor: pointer;
+  font-size: 1.3em;
+  padding-right: 1em;
+}
+
+#container .settings #block-manage.open .block .right i {
+  color: crimson;
+  text-shadow: 1px 1px 5px rgba(255, 255, 255, 0.1);
+}
+
+#container .settings #block-manage.open .block .time {
+  width: 100%;
+  text-align: center;
+  font-weight: lighter;
+  color: gray;
+  padding: 5px;
+  border-radius: 0 0 1em 1em;
+  margin-top: 10px;
+}
+
 /* Theme */
 body.light #container .settings .form-manage.open {
   background: #cccccc;
+}
+
+body.light #container .settings #block-manage.open .block {
+  background: #d8d8d8;
+}
+
+body.light #container .settings #block-manage.open .block .time {
+  background: #dfdfdf;
 }
 
 body.dark #container .settings .form-manage.open {
   background: #10101a;
   -webkit-box-shadow: 0 2px 5px rgba(255, 255, 255, 0.151);
           box-shadow: 0 2px 5px rgba(255, 255, 255, 0.151);
+}
+
+body.dark #container .settings #block-manage.open .block {
+  background: #1e1e30;
+}
+
+body.dark #container .settings #block-manage.open .block .time {
+  background: #282833;
 }
 
 @media screen and (max-width: 900px) {
@@ -155,6 +230,12 @@ body.dark #container .settings .form-manage.open {
   }
   #container .settings .form-manage.open input[type="submit"] {
     width: 100%;
+  }
+  #container .settings #block-manage.open .block {
+    font-size: .8em;
+  }
+  #container .settings #block-manage.open .block .left img {
+    display: none;
   }
 }
 /*# sourceMappingURL=settings.css.map */
