--- a/public/css/home/settings/settings.scss
+++ b/public/css/home/settings/settings.scss
@@ -3,6 +3,51 @@
     position: relative;
 }
 
+.theme-box {
+    margin: 2em 0;
+    display: block;
+    display: flex;
+    align-items: center;
+    font-weight: 500;
+    font-size: .9em;
+
+    #switch-theme-btn {
+        cursor: pointer;
+        position: relative;
+        width: 60px;
+        border-radius: 1em;
+        height: 30px;
+        display: inline-block;
+        margin-right: 15px;
+
+        .slider {
+            height: 24px;
+            width: 24px;
+            display: block;
+            position: absolute;
+            border-radius: 90%;
+            top: 3px;
+            transition: 500ms
+        }
+    }
+
+    input:checked + .slider {
+        left: 4px;
+    }
+
+    input:not(:checked) + .slider {
+        left: 32px;
+    }
+
+    #theme-check {
+        display: none;
+    }
+}
+
+#container .settings  {
+    padding-bottom: 6em;
+}
+
 #container .settings .btn {
     cursor: pointer;
     padding: 15px 25px;
@@ -26,9 +71,7 @@
 
 #container .settings #logout-btn {
     position: absolute;
-    bottom: 1em;
-    left: 4em;
-    background: linear-gradient(35deg, #ff0000 40%,  #940000);
+    background: crimson;
 }
 
 /* Form Manage */
@@ -143,10 +186,10 @@
             width: 100%;
             text-align: center;
             font-weight: lighter;
-            color: rgb(128, 128, 128);
             padding: 5px;
             border-radius: 0 0 1em 1em;
             margin-top: 10px;
+            color: rgb(128, 128, 128);
         }
     }
 }
@@ -154,7 +197,6 @@
 /* Theme */
 
 body.light {
-
     #container .settings .form-manage.open {
         background: rgb(204, 204, 204);
     }
@@ -162,8 +204,20 @@ body.light {
     #container .settings #block-manage.open .block{
         background: #d8d8d8;
 
+        a {
+            color: #0D0D1A;
+        }
+
         .time {
             background: #dfdfdf;
+        }
+    }
+
+    #switch-theme-btn {
+        background: #dfdfdf;
+
+        .slider {
+            background: #0D0D1A;
         }
     }
 }
@@ -177,8 +231,21 @@ body.dark {
     #container .settings #block-manage.open .block{
         background: #1e1e30; 
 
+        a {
+            color: #EDEDED;
+        }
+
         .time {
             background: #282833;
+        }
+    }
+
+    #switch-theme-btn {
+        background: #1e1e30; 
+
+        .slider {
+            background: #eb4808;
+            box-shadow: 0px 0px 8px rgba(255, 255, 255, 0.2);
         }
     }
 }
