--- a/public/includes/message.html
+++ b/public/includes/message.html
@@ -28,3 +28,5 @@
 <div id="message-btn" class="message-btn-close">
     <i class="fas fa-chevron-up"></i>
 </div>
+
+<script src="../../js/openMessages.js"></script>
