--- a/public/includes/tool-bar.html
+++ b/public/includes/tool-bar.html
@@ -14,7 +14,7 @@
             <span>Notifications</span>
         </a>
     
-        <a href="#" class="btn">
+        <a href="user.php" class="btn">
             <i class="fas fa-user"></i>
             <span>Profile</span>
         </a>
