--- a/public/css/home/grid/grid.css
+++ b/public/css/home/grid/grid.css
@@ -126,6 +126,11 @@
           transform: rotate(180deg);
 }
 
+body.light #container {
+  -webkit-box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
 body.light #tool-bar {
   background: #EDEDED;
   -webkit-box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
@@ -170,6 +175,11 @@ body.light #message-section.message-section-open::-webkit-scrollbar-track {
 body.light #message-btn {
   -webkit-box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
           box-shadow: 0px -5px 5px rgba(0, 0, 0, 0.1);
+}
+
+body.dark #container {
+  -webkit-box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
+          box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
 }
 
 body.dark #tool-bar {
@@ -219,7 +229,7 @@ body.dark #message-btn {
 @media screen and (max-width: 900px) {
   #container {
     margin: 0;
-    padding-top: 6em;
+    padding-top: 5em;
   }
   #container h1 {
     font-size: 1em;
