--- a/public/css/home/grid/grid.scss
+++ b/public/css/home/grid/grid.scss
@@ -123,6 +123,10 @@
 }
 
 body.light {
+    #container {
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    }
+
     #tool-bar {
         background: #EDEDED;
         box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1);
@@ -166,6 +170,10 @@ body.light {
 }
 
 body.dark {
+    #container {
+        box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.1);
+    }
+    
     #tool-bar {
         background: #0D0D1A;
         box-shadow: 0px 0px 5px rgba(134, 134, 134, 0.1);
@@ -211,7 +219,7 @@ body.dark {
 @media screen and (max-width: 900px) { 
     #container  {
         margin: 0;
-        padding-top: 6em;
+        padding-top: 5em;
 
         h1 {
             font-size: 1em;
