--- a/public/css/home/grid/grid.scss
+++ b/public/css/home/grid/grid.scss
@@ -219,15 +219,17 @@ body.dark {
 @media screen and (max-width: 900px) { 
     #container  {
         margin: 0;
-        padding-top: 5em;
+        padding-top: 4em;
 
         h1 {
+            margin-top: 1em;
             font-size: 1em;
         }
     }
 
     #tool-bar {
         width: 100vw;
+        height: 5em;
         display: flex;
         justify-content: space-between;
         align-items: center;
