--- a/public/css/user/user.css
+++ b/public/css/user/user.css
@@ -49,25 +49,55 @@
   font-size: .8em;
   text-align: justify;
   color: #b8b8b8;
-  margin: .8em 0;
+  margin: 1em 0;
 }
 
-.top .info .follow {
+.top .info .bottom-bar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.top .info .bottom-bar .left {
   font-size: .9em;
 }
 
-.top .info .follow a {
+.top .info .bottom-bar .left a {
   padding-right: 1em;
   color: #646464;
 }
 
-.top .info .follow a span {
+.top .info .bottom-bar .left a span {
   font-weight: 500;
   color: rgba(255, 255, 255, 0.8);
 }
 
-.top .info .follow a:hover {
+.top .info .bottom-bar .left a:hover {
   text-decoration: underline;
+}
+
+.top .info .bottom-bar .right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.top .info .bottom-bar .right .btn {
+  padding: 5px 10px;
+  font-size: 1em;
+  border-radius: .5em;
+  cursor: pointer;
+  font-weight: 500;
+}
+
+.top .info .bottom-bar .right .btn:not(:last-child) {
+  margin-right: 10px;
 }
 
 body.light .info .time {
@@ -78,12 +108,22 @@ body.light .info .description {
   color: #333333;
 }
 
-body.light .info .follow a {
+body.light .info .bottom-bar .left a {
   color: #646464;
 }
 
-body.light .info .follow a span {
+body.light .info .bottom-bar .left a span {
   color: black;
+}
+
+body.light .info .bottom-bar .right .btn {
+  border: 1px solid black;
+}
+
+body.light .info .bottom-bar .right .btn:hover {
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-transition: 200ms;
+  transition: 200ms;
 }
 
 body.dark {
@@ -99,12 +139,22 @@ body.dark .info .description {
   color: #b8b8b8;
 }
 
-body.dark .info .follow a {
+body.dark .info .bottom-bar .left a {
   color: #646464;
 }
 
-body.dark .info .follow a span {
+body.dark .info .bottom-bar .left a span {
   color: rgba(255, 255, 255, 0.8);
+}
+
+body.dark .info .bottom-bar .right .btn {
+  border: 1px solid silver;
+}
+
+body.dark .info .bottom-bar .right .btn:hover {
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-transition: 200ms;
+  transition: 200ms;
 }
 
 @media screen and (max-width: 900px) {
@@ -121,6 +171,34 @@ body.dark .info .follow a span {
   }
   .top .info .name {
     font-size: 1.2em;
+  }
+  .top .info .bottom-bar .left {
+    font-size: .8em;
+  }
+  .top .info .bottom-bar .right {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .top .info .bottom-bar .right .btn {
+    font-size: .8em;
+    height: 30px;
+    width: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .top .info .bottom-bar .right .btn span {
+    display: none;
+  }
+  .top .info .bottom-bar .right .btn:not(:last-child) {
+    margin-right: 10px;
   }
 }
 /*# sourceMappingURL=user.css.map */
