--- a/public/css/user/user.scss
+++ b/public/css/user/user.scss
@@ -46,23 +46,45 @@
             font-size: .8em;
             text-align: justify;
             color: rgb(184, 184, 184);
-            margin: .8em 0;
+            margin: 1em 0;
         }
 
-        .follow {
-            font-size: .9em;
+        .bottom-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
 
-            a {
-                padding-right: 1em;
-                color: rgb(100, 100, 100);
-                
-                span {
-                    font-weight: 500;
-                    color: rgba(255, 255, 255, 0.8);
+            .left {
+                font-size: .9em;
+    
+                a {
+                    padding-right: 1em;
+                    color: rgb(100, 100, 100);
+                    
+                    span {
+                        font-weight: 500;
+                        color: rgba(255, 255, 255, 0.8);
+                    }
+    
+                    &:hover {
+                        text-decoration: underline;
+                    }
                 }
+            }
 
-                &:hover {
-                    text-decoration: underline;
+            .right {
+                display: flex;
+
+                .btn {
+                    padding: 5px 10px;
+                    font-size: 1em;
+                    border-radius: .5em;
+                    cursor: pointer;
+                    font-weight: 500;
+
+                    &:not(:last-child) {
+                        margin-right: 10px;
+                    }
                 }
             }
         }
@@ -79,12 +101,25 @@ body.light {
             color: rgb(51, 51, 51);
         }
 
-        .follow {
-            a {
-                color: rgb(100, 100, 100);
-                
-                span {
-                    color: rgb(0, 0, 0);
+        .bottom-bar {
+            .left {
+                a {
+                    color: rgb(100, 100, 100);
+                    
+                    span {
+                        color: rgb(0, 0, 0);
+                    }
+                }
+            }
+
+            .right {
+                .btn {
+                    border: 1px solid rgb(0, 0, 0);
+
+                    &:hover {
+                        background: rgba(0, 0, 0, 0.1);
+                        transition: 200ms;
+                    }
                 }
             }
         }
@@ -103,12 +138,25 @@ body.dark {
             color: rgb(184, 184, 184);
         }
 
-        .follow {
-            a {
-                color: rgb(100, 100, 100);
-                
-                span {
-                    color: rgba(255, 255, 255, 0.8);
+        .bottom-bar {
+            .left {
+                a {
+                    color: rgb(100, 100, 100);
+                    
+                    span {
+                        color: rgba(255, 255, 255, 0.8);
+                    }
+                }
+            }
+
+            .right {
+                .btn {
+                    border: 1px solid rgb(192, 192, 192);
+
+                    &:hover {
+                        background: rgba(255, 255, 255, 0.1);
+                        transition: 200ms;
+                    }
                 }
             }
         }
@@ -133,6 +181,32 @@ body.dark {
 
             .name {
                 font-size: 1.2em;
+            }
+
+            .bottom-bar {    
+                .left {
+                    font-size: .8em;
+                }
+    
+                .right {
+                    display: flex;
+    
+                    .btn {
+                        font-size: .8em;
+                        height: 30px;
+                        width: 30px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        span {
+                            display: none;
+                        }
+
+                        &:not(:last-child) {
+                            margin-right: 10px;
+                        }
+                    }
+                }
             }
         }
     }
