--- a/public/css/user/user.css
+++ b/public/css/user/user.css
@@ -6,7 +6,6 @@
 
 .top .banner {
   width: 100%;
-  background: rgba(255, 0, 0, 0.2);
   height: 25vh;
 }
 
@@ -23,8 +22,12 @@
   position: absolute;
   border-radius: 90%;
   width: 25vh;
+  height: 25vh;
   top: 10vh;
   left: 1em;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  border: 4px solid rgba(0, 0, 0, 0.5);
 }
 
 .top .info .time {
@@ -163,6 +166,7 @@ body.dark .info .bottom-bar .right .btn:hover {
   }
   .top .info img {
     width: 20vh;
+    height: 20vh;
     top: 15vh;
     left: 1em;
   }
