--- a/public/css/user/user.scss
+++ b/public/css/user/user.scss
@@ -4,7 +4,6 @@
 
     .banner {
         width: 100%;
-        background: rgba(255, 0, 0, 0.2 );
         height: 25vh; 
 
         img {
@@ -20,8 +19,11 @@
             position: absolute;
             border-radius: 90%;
             width: 25vh;
+            height: 25vh;
             top: 10vh;
             left: 1em;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+            border: 4px solid rgba(0, 0, 0, 0.5);
         }
 
         .time {
@@ -171,6 +173,7 @@ body.dark {
     
             img {
                 width: 20vh;
+                height: 20vh;
                 top: 15vh;
                 left: 1em;
             }
