--- a/public/css/home/settings/settings.scss
+++ b/public/css/home/settings/settings.scss
@@ -124,6 +124,15 @@
     font-size: 1em;
 }
 
+#container .settings .form-manage.open textarea {
+    outline: none;
+    border: none;
+    padding: 1em;
+    width: 70%;
+    border-radius: 1em;
+    font-size: 1em;
+}
+
 #container .settings .form-manage.open input[type="submit"] {
     background: rgb(46, 139, 87);
     color: #FFF;
@@ -271,6 +280,12 @@ body.dark {
     }
 
     #container .settings .form-manage.open input {
+        width: 100%;
+        font-size: 1.1em;
+        margin-bottom: 2em;
+    }
+
+    #container .settings .form-manage.open textarea {
         width: 100%;
         font-size: 1.1em;
         margin-bottom: 2em;
